# MyDoc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  app.cpp
src/MainApplication/: CMakeLists.txt
src/MainApplication/include/: MainApplication.hh
src/MainApplication/src/: MainApplication.cpp
